--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,8 @@
         android:supportsRtl="true"
         android:usesCleartextTraffic="true"
         android:theme="@style/Theme.RecipeAdviser">
-        <activity android:name=".ui.CurrentRecipeActivity"/>
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.activities.CurrentRecipeActivity"/>
+        <activity android:name=".ui.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
